// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsPanel contains expected elements. > should contains default elements in editing mode. 1`] = `
<div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Current View Settings"
  >
    <div
      class="awsui_root_14mhv_av9zi_174"
      data-analytics-field-label="[id="formField:r0:-label"]"
    >
      <div
        class=""
      >
        <label
          class="awsui_label_14mhv_av9zi_210"
          for="formField:r0:"
          id="formField:r0:-label"
        >
          <div
            class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-bold_18wu0_1elzt_414"
          >
            Toggle visibility
          </div>
        </label>
      </div>
      <div
        class="awsui_controls_14mhv_av9zi_246"
      >
        <div
          class="awsui_grid_14yj0_1lwse_99"
        >
          <div
            class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
          >
            <div
              class="awsui_restore-pointer-events_14yj0_1lwse_314"
            >
              <div
                class="awsui_control_14mhv_av9zi_246"
              >
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Motion indicator
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r0:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r1:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Tag
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r0:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r2:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Overlay
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r0:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r3:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Annotation
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r0:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r4:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Scene Settings"
  >
    <div
      class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
    >
      <div
        class="awsui_child_18582_z63vw_103"
      >
        <div
          class="awsui_root_14mhv_av9zi_174"
          data-analytics-field-label="[id="formField:r5:-label"]"
        >
          <div
            class=""
          >
            <label
              class="awsui_label_14mhv_av9zi_210"
              for="formField:r5:"
              id="formField:r5:-label"
            >
              Environment Preset
            </label>
          </div>
          <div
            class="awsui_controls_14mhv_av9zi_246"
          >
            <div
              class="awsui_grid_14yj0_1lwse_99"
            >
              <div
                class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
              >
                <div
                  class="awsui_restore-pointer-events_14yj0_1lwse_314"
                >
                  <div
                    class="awsui_control_14mhv_av9zi_246"
                  >
                    <div
                      class="awsui_root_r2vco_wvvus_99"
                    >
                      <div
                        class="awsui_root_qwoo0_1ea5w_149"
                      >
                        <div
                          class=""
                          id=":rb:"
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="formField:r5:-label select-arialabel-:r9: trigger-content-:rd:"
                            class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                            id="formField:r5:"
                            type="button"
                          >
                            <span
                              class="awsui_trigger_dwuol_18z0d_122"
                              id="trigger-content-:rd:"
                            >
                              Neutral
                            </span>
                            <span
                              class="awsui_arrow_18eso_syr88_103"
                            >
                              <span
                                class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                              >
                                <svg
                                  aria-hidden="true"
                                  focusable="false"
                                  viewBox="0 0 16 16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    class="filled stroke-linejoin-round"
                                    d="M4 5h8l-4 6-4-6z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                      <span
                        class="awsui_root_xttbq_pgwjg_99"
                        id="select-arialabel-:r9:"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Tag Settings"
  >
    <scenetagsettingseditor />
    <p
      class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-bold_18wu0_1elzt_414"
    >
      Overlay
    </p>
    <p
      class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
    >
      Visibility settings
    </p>
    <span
      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
    >
      <span
        aria-disabled="true"
        class="awsui_label-wrapper_1wepg_11g7b_126"
      >
        <span
          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-disabled_4yi2u_11uib_173"
        >
          <span
            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-disabled_4yi2u_11uib_201"
          />
          <input
            aria-labelledby=":re:-label"
            class="awsui_native-input_1wepg_11g7b_116"
            disabled=""
            id=":re:"
            type="checkbox"
          />
          <span
            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
          />
        </span>
        <span
          class="awsui_content_1wepg_11g7b_99"
        >
          <span
            class="awsui_label_1wepg_11g7b_101 awsui_label-disabled_1wepg_11g7b_155"
            id=":re:-label"
          >
            Always on
          </span>
        </span>
      </span>
    </span>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Data Binding Template"
  >
    <scenedatabindingtemplateeditor
      valuedatabindingprovider="[object Object]"
    />
  </div>
</div>
`;

exports[`SettingsPanel contains expected elements. > should contains default elements in viewing mode. 1`] = `
<div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Current View Settings"
  >
    <div
      class="awsui_root_14mhv_av9zi_174"
      data-analytics-field-label="[id="formField:rf:-label"]"
    >
      <div
        class=""
      >
        <label
          class="awsui_label_14mhv_av9zi_210"
          for="formField:rf:"
          id="formField:rf:-label"
        >
          <div
            class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-bold_18wu0_1elzt_414"
          >
            Toggle visibility
          </div>
        </label>
      </div>
      <div
        class="awsui_controls_14mhv_av9zi_246"
      >
        <div
          class="awsui_grid_14yj0_1lwse_99"
        >
          <div
            class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
          >
            <div
              class="awsui_restore-pointer-events_14yj0_1lwse_314"
            >
              <div
                class="awsui_control_14mhv_av9zi_246"
              >
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Motion indicator
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:rf:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":rg:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Tag
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:rf:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":rh:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Overlay
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:rf:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":ri:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Annotation
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:rf:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":rj:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Tag Settings"
  >
    <scenetagsettingseditor />
  </div>
</div>
`;

exports[`SettingsPanel contains expected elements. > should contains settings element for converting scene in editing. 1`] = `
<div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Current View Settings"
  >
    <div
      class="awsui_root_14mhv_av9zi_174"
      data-analytics-field-label="[id="formField:r18:-label"]"
    >
      <div
        class=""
      >
        <label
          class="awsui_label_14mhv_av9zi_210"
          for="formField:r18:"
          id="formField:r18:-label"
        >
          <div
            class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-bold_18wu0_1elzt_414"
          >
            Toggle visibility
          </div>
        </label>
      </div>
      <div
        class="awsui_controls_14mhv_av9zi_246"
      >
        <div
          class="awsui_grid_14yj0_1lwse_99"
        >
          <div
            class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
          >
            <div
              class="awsui_restore-pointer-events_14yj0_1lwse_314"
            >
              <div
                class="awsui_control_14mhv_av9zi_246"
              >
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Motion indicator
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r18:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r19:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Tag
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r18:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r1a:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Overlay
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r18:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r1b:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Annotation
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r18:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r1c:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Scene Settings"
  >
    <div
      class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
    >
      <div
        class="awsui_child_18582_z63vw_103"
      >
        <div
          class="awsui_root_14mhv_av9zi_174"
          data-analytics-field-label="[id="formField:r1d:-label"]"
        >
          <div
            class=""
          >
            <label
              class="awsui_label_14mhv_av9zi_210"
              for="formField:r1d:"
              id="formField:r1d:-label"
            >
              Environment Preset
            </label>
          </div>
          <div
            class="awsui_controls_14mhv_av9zi_246"
          >
            <div
              class="awsui_grid_14yj0_1lwse_99"
            >
              <div
                class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
              >
                <div
                  class="awsui_restore-pointer-events_14yj0_1lwse_314"
                >
                  <div
                    class="awsui_control_14mhv_av9zi_246"
                  >
                    <div
                      class="awsui_root_r2vco_wvvus_99"
                    >
                      <div
                        class="awsui_root_qwoo0_1ea5w_149"
                      >
                        <div
                          class=""
                          id=":r1j:"
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="formField:r1d:-label select-arialabel-:r1h: trigger-content-:r1l:"
                            class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                            id="formField:r1d:"
                            type="button"
                          >
                            <span
                              class="awsui_trigger_dwuol_18z0d_122"
                              id="trigger-content-:r1l:"
                            >
                              Neutral
                            </span>
                            <span
                              class="awsui_arrow_18eso_syr88_103"
                            >
                              <span
                                class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                              >
                                <svg
                                  aria-hidden="true"
                                  focusable="false"
                                  viewBox="0 0 16 16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    class="filled stroke-linejoin-round"
                                    d="M4 5h8l-4 6-4-6z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                      <span
                        class="awsui_root_xttbq_pgwjg_99"
                        id="select-arialabel-:r1h:"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Tag Settings"
  >
    <scenetagsettingseditor />
    <p
      class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-bold_18wu0_1elzt_414"
    >
      Overlay
    </p>
    <p
      class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
    >
      Visibility settings
    </p>
    <span
      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
    >
      <span
        aria-disabled="true"
        class="awsui_label-wrapper_1wepg_11g7b_126"
      >
        <span
          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-disabled_4yi2u_11uib_173"
        >
          <span
            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-disabled_4yi2u_11uib_201"
          />
          <input
            aria-labelledby=":r1m:-label"
            class="awsui_native-input_1wepg_11g7b_116"
            disabled=""
            id=":r1m:"
            type="checkbox"
          />
          <span
            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
          />
        </span>
        <span
          class="awsui_content_1wepg_11g7b_99"
        >
          <span
            class="awsui_label_1wepg_11g7b_101 awsui_label-disabled_1wepg_11g7b_155"
            id=":r1m:-label"
          >
            Always on
          </span>
        </span>
      </span>
    </span>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Convert scene"
  >
    <div
      data-mocked="ConvertSceneSettings"
    />
  </div>
</div>
`;

exports[`SettingsPanel contains expected elements. > should contains settings element for overlay in editing. 1`] = `
<div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Current View Settings"
  >
    <div
      class="awsui_root_14mhv_av9zi_174"
      data-analytics-field-label="[id="formField:rk:-label"]"
    >
      <div
        class=""
      >
        <label
          class="awsui_label_14mhv_av9zi_210"
          for="formField:rk:"
          id="formField:rk:-label"
        >
          <div
            class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-bold_18wu0_1elzt_414"
          >
            Toggle visibility
          </div>
        </label>
      </div>
      <div
        class="awsui_controls_14mhv_av9zi_246"
      >
        <div
          class="awsui_grid_14yj0_1lwse_99"
        >
          <div
            class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
          >
            <div
              class="awsui_restore-pointer-events_14yj0_1lwse_314"
            >
              <div
                class="awsui_control_14mhv_av9zi_246"
              >
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Motion indicator
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:rk:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":rl:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Tag
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:rk:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":rm:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Overlay
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:rk:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":rn:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Annotation
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:rk:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":ro:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Scene Settings"
  >
    <div
      class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
    >
      <div
        class="awsui_child_18582_z63vw_103"
      >
        <div
          class="awsui_root_14mhv_av9zi_174"
          data-analytics-field-label="[id="formField:rp:-label"]"
        >
          <div
            class=""
          >
            <label
              class="awsui_label_14mhv_av9zi_210"
              for="formField:rp:"
              id="formField:rp:-label"
            >
              Environment Preset
            </label>
          </div>
          <div
            class="awsui_controls_14mhv_av9zi_246"
          >
            <div
              class="awsui_grid_14yj0_1lwse_99"
            >
              <div
                class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
              >
                <div
                  class="awsui_restore-pointer-events_14yj0_1lwse_314"
                >
                  <div
                    class="awsui_control_14mhv_av9zi_246"
                  >
                    <div
                      class="awsui_root_r2vco_wvvus_99"
                    >
                      <div
                        class="awsui_root_qwoo0_1ea5w_149"
                      >
                        <div
                          class=""
                          id=":rv:"
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="formField:rp:-label select-arialabel-:rt: trigger-content-:r11:"
                            class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                            id="formField:rp:"
                            type="button"
                          >
                            <span
                              class="awsui_trigger_dwuol_18z0d_122"
                              id="trigger-content-:r11:"
                            >
                              Neutral
                            </span>
                            <span
                              class="awsui_arrow_18eso_syr88_103"
                            >
                              <span
                                class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                              >
                                <svg
                                  aria-hidden="true"
                                  focusable="false"
                                  viewBox="0 0 16 16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    class="filled stroke-linejoin-round"
                                    d="M4 5h8l-4 6-4-6z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                      <span
                        class="awsui_root_xttbq_pgwjg_99"
                        id="select-arialabel-:rt:"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Tag Settings"
  >
    <scenetagsettingseditor />
    <p
      class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-bold_18wu0_1elzt_414"
    >
      Overlay
    </p>
    <p
      class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
    >
      Visibility settings
    </p>
    <span
      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
    >
      <span
        aria-disabled="true"
        class="awsui_label-wrapper_1wepg_11g7b_126"
      >
        <span
          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-disabled_4yi2u_11uib_173"
        >
          <span
            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-disabled_4yi2u_11uib_201"
          />
          <input
            aria-labelledby=":r12:-label"
            class="awsui_native-input_1wepg_11g7b_116"
            disabled=""
            id=":r12:"
            type="checkbox"
          />
          <span
            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
          />
        </span>
        <span
          class="awsui_content_1wepg_11g7b_99"
        >
          <span
            class="awsui_label_1wepg_11g7b_101 awsui_label-disabled_1wepg_11g7b_155"
            id=":r12:-label"
          >
            Always on
          </span>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`SettingsPanel contains expected elements. > should contains settings element for overlay in viewing. 1`] = `
<div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Current View Settings"
  >
    <div
      class="awsui_root_14mhv_av9zi_174"
      data-analytics-field-label="[id="formField:r13:-label"]"
    >
      <div
        class=""
      >
        <label
          class="awsui_label_14mhv_av9zi_210"
          for="formField:r13:"
          id="formField:r13:-label"
        >
          <div
            class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-bold_18wu0_1elzt_414"
          >
            Toggle visibility
          </div>
        </label>
      </div>
      <div
        class="awsui_controls_14mhv_av9zi_246"
      >
        <div
          class="awsui_grid_14yj0_1lwse_99"
        >
          <div
            class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
          >
            <div
              class="awsui_restore-pointer-events_14yj0_1lwse_314"
            >
              <div
                class="awsui_control_14mhv_av9zi_246"
              >
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Motion indicator
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r13:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r14:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Tag
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r13:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r15:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Overlay
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r13:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r16:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
                <hr
                  class="sc-cPiKLX bJavOH"
                />
                <div
                  class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-vertical-s_18wu0_1elzt_892 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                >
                  <p
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-variant_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    Annotation
                  </p>
                  <div
                    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_f-right_18wu0_1elzt_1053 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                  >
                    <span
                      class="awsui_wrapper_1wepg_11g7b_120 awsui_root_4yi2u_11uib_99"
                    >
                      <span
                        aria-disabled="true"
                        class="awsui_label-wrapper_1wepg_11g7b_126"
                      >
                        <span
                          class="awsui_control_1wepg_11g7b_161 awsui_toggle-control_4yi2u_11uib_157 awsui_toggle-control-checked_4yi2u_11uib_170 awsui_toggle-control-disabled_4yi2u_11uib_173"
                        >
                          <span
                            class="awsui_toggle-handle_4yi2u_11uib_180 awsui_toggle-handle-checked_4yi2u_11uib_195 awsui_toggle-handle-disabled_4yi2u_11uib_201"
                          />
                          <input
                            aria-labelledby="formField:r13:-label"
                            class="awsui_native-input_1wepg_11g7b_116"
                            disabled=""
                            id=":r17:"
                            type="checkbox"
                          />
                          <span
                            class="awsui_outline_1wepg_11g7b_109 awsui_outline_4yi2u_11uib_135"
                          />
                        </span>
                        <span
                          class="awsui_content_1wepg_11g7b_99 awsui_empty-content_1wepg_11g7b_137"
                        />
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Tag Settings"
  >
    <scenetagsettingseditor />
  </div>
</div>
`;
